--- a/versions.properties
+++ b/versions.properties
@@ -7,19 +7,58 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
-plugin.com.ncorti.ktfmt.gradle=0.17.0
+version.com.tryformation..fluent-kotlin=0.1.7
 
-version.ch.qos.logback..logback-classic=1.5.3
+version.dev.fritz2..core=1.0-RC17
 
-version.com.github.jillesvangurp..kotlin4example=1.1.5
+version.dev.fritz2..headless=1.0-RC17
 
-version.junit.jupiter=5.10.2
+ version.koin=3.5.6
+### available=3.6.0-alpha1
+### available=3.6.0-alpha3
+### available=3.6.0-Beta2
+### available=3.6.0-Beta3
+### available=3.6.0-Beta4
+### available=3.6.0-wasm-alpha1
+### available=3.6.0-wasm-alpha2
 
-version.kotest=5.8.1
+version.kotest=5.9.0
 
-version.kotlin=1.9.23
-## # available=2.0.0-Beta1
-## # available=2.0.0-Beta2
-## # available=2.0.0-Beta3
-## # available=2.0.0-Beta4
-## # available=2.0.0-Beta5
+version.kotlin=2.0.0
+
+version.kotlinx.serialization=1.6.3
+##                # available=1.7.0-RC
+
+## unused
+version.npm.@tailwindcss/forms=0.5.7
+
+version.npm.autoprefixer=10.4.19
+
+version.npm.css-loader=7.1.2
+
+version.npm.cssnano=7.0.1
+
+version.npm.postcss=8.4.38
+
+version.npm.postcss-loader=8.1.1
+
+version.npm.style-loader=4.0.0
+
+version.npm.tailwindcss=3.4.3
+##          # available=4.0.0-alpha.1
+##          # available=4.0.0-alpha.2
+##          # available=4.0.0-alpha.3
+##          # available=4.0.0-alpha.4
+##          # available=4.0.0-alpha.5
+##          # available=4.0.0-alpha.6
+##          # available=4.0.0-alpha.7
+##          # available=4.0.0-alpha.8
+##          # available=4.0.0-alpha.9
+##          # available=4.0.0-alpha.10
+##          # available=4.0.0-alpha.11
+##          # available=4.0.0-alpha.12
+##          # available=4.0.0-alpha.13
+##          # available=4.0.0-alpha.14
+##          # available=4.0.0-alpha.15
+
+version.org.jetbrains..markdown=0.7.3
