--- a/versions.properties
+++ b/versions.properties
@@ -7,11 +7,11 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
-version.com.tryformation..fluent-kotlin=0.1.7
+version.com.tryformation..fluent-kotlin=1.0.0
 
-version.dev.fritz2..core=1.0-RC17
+version.dev.fritz2..core=1.0-RC18
 
-version.dev.fritz2..headless=1.0-RC17
+version.dev.fritz2..headless=1.0-RC18
 
  version.koin=3.5.6
 ### available=3.6.0-alpha1
@@ -22,12 +22,12 @@ version.dev.fritz2..headless=1.0-RC17
 ### available=3.6.0-wasm-alpha1
 ### available=3.6.0-wasm-alpha2
 
-version.kotest=5.9.0
+version.kotest=5.9.1
 
 version.kotlin=2.0.0
+## # available=2.0.20-Beta1
 
-version.kotlinx.serialization=1.6.3
-##                # available=1.7.0-RC
+version.kotlinx.serialization=1.7.0
 
 ## unused
 version.npm.@tailwindcss/forms=0.5.7
@@ -36,7 +36,7 @@ version.npm.autoprefixer=10.4.19
 
 version.npm.css-loader=7.1.2
 
-version.npm.cssnano=7.0.1
+version.npm.cssnano=7.0.3
 
 version.npm.postcss=8.4.38
 
@@ -44,7 +44,7 @@ version.npm.postcss-loader=8.1.1
 
 version.npm.style-loader=4.0.0
 
-version.npm.tailwindcss=3.4.3
+version.npm.tailwindcss=3.4.4
 ##          # available=4.0.0-alpha.1
 ##          # available=4.0.0-alpha.2
 ##          # available=4.0.0-alpha.3
@@ -60,5 +60,6 @@ version.npm.tailwindcss=3.4.3
 ##          # available=4.0.0-alpha.13
 ##          # available=4.0.0-alpha.14
 ##          # available=4.0.0-alpha.15
+##          # available=4.0.0-alpha.16
 
 version.org.jetbrains..markdown=0.7.3
