--- a/versions.properties
+++ b/versions.properties
@@ -7,6 +7,8 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
+version.com.jillesvangurp..kotlinx-serialization-extensions=1.0.2
+
 version.com.tryformation..fluent-kotlin=1.0.0
 
 version.dev.fritz2..core=1.0-RC18
@@ -26,6 +28,8 @@ version.kotest=5.9.1
 
 version.kotlin=2.0.0
 ## # available=2.0.20-Beta1
+
+version.kotlinx.datetime=0.6.0
 
 version.kotlinx.serialization=1.7.0
 
