--- a/versions.properties
+++ b/versions.properties
@@ -7,48 +7,49 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
-version.com.jillesvangurp..kotlinx-serialization-extensions=1.0.2
+version.com.jillesvangurp..kotlinx-serialization-extensions=1.0.6
 
 version.com.tryformation..fluent-kotlin=1.0.0
 
-version.dev.fritz2..core=1.0-RC18
+version.dev.fritz2..core=1.0-RC20
 
-version.dev.fritz2..headless=1.0-RC18
+version.dev.fritz2..headless=1.0-RC20
 
- version.koin=3.5.6
-### available=3.6.0-alpha1
-### available=3.6.0-alpha3
-### available=3.6.0-Beta2
-### available=3.6.0-Beta3
-### available=3.6.0-Beta4
-### available=3.6.0-wasm-alpha1
-### available=3.6.0-wasm-alpha2
+ version.koin=4.0.4
+### available=4.1.0-Beta1
+### available=4.1.0-Beta3
+### available=4.1.0-Beta4
+### available=4.1.0-Beta5
+### available=4.1.0-Beta6
+### available=4.1.0-Beta7
 
 version.kotest=5.9.1
+## # available=6.0.0.M1
+## # available=6.0.0.M2
+## # available=6.0.0.M3
 
-version.kotlin=2.0.0
-## # available=2.0.20-Beta1
+version.kotlin=2.1.20
 
-version.kotlinx.datetime=0.6.0
+version.kotlinx.datetime=0.6.2
 
-version.kotlinx.serialization=1.7.0
+version.kotlinx.serialization=1.8.1
 
 ## unused
 version.npm.@tailwindcss/forms=0.5.7
 
-version.npm.autoprefixer=10.4.19
+version.npm.autoprefixer=10.4.21
 
 version.npm.css-loader=7.1.2
 
-version.npm.cssnano=7.0.3
+version.npm.cssnano=7.0.6
 
-version.npm.postcss=8.4.38
+version.npm.postcss=8.5.3
 
 version.npm.postcss-loader=8.1.1
 
 version.npm.style-loader=4.0.0
 
-version.npm.tailwindcss=3.4.4
+version.npm.tailwindcss=3.4.17
 ##          # available=4.0.0-alpha.1
 ##          # available=4.0.0-alpha.2
 ##          # available=4.0.0-alpha.3
@@ -65,5 +66,57 @@ version.npm.tailwindcss=3.4.4
 ##          # available=4.0.0-alpha.14
 ##          # available=4.0.0-alpha.15
 ##          # available=4.0.0-alpha.16
+##          # available=4.0.0-alpha.17
+##          # available=4.0.0-alpha.18
+##          # available=4.0.0-alpha.19
+##          # available=4.0.0-alpha.20
+##          # available=4.0.0-alpha.21
+##          # available=4.0.0-alpha.22
+##          # available=4.0.0-alpha.23
+##          # available=4.0.0-alpha.24
+##          # available=4.0.0-alpha.25
+##          # available=4.0.0-alpha.26
+##          # available=4.0.0-alpha.27
+##          # available=4.0.0-alpha.28
+##          # available=4.0.0-alpha.29
+##          # available=4.0.0-alpha.30
+##          # available=4.0.0-alpha.31
+##          # available=4.0.0-alpha.32
+##          # available=4.0.0-alpha.33
+##          # available=4.0.0-alpha.34
+##          # available=4.0.0-alpha.35
+##          # available=4.0.0-alpha.36
+##          # available=4.0.0-beta.1
+##          # available=4.0.0-beta.2
+##          # available=4.0.0-beta.3
+##          # available=4.0.0-beta.4
+##          # available=4.0.0-beta.5
+##          # available=4.0.0-beta.6
+##          # available=4.0.0-beta.7
+##          # available=4.0.0-beta.8
+##          # available=4.0.0-beta.9
+##          # available=4.0.0-beta.10
+##          # available=4.0.0
+##          # available=4.0.1
+##          # available=4.0.2
+##          # available=4.0.3
+##          # available=4.0.4
+##          # available=4.0.5
+##          # available=4.0.6
+##          # available=4.0.7
+##          # available=4.0.8
+##          # available=4.0.9
+##          # available=4.0.10
+##          # available=4.0.11
+##          # available=4.0.12
+##          # available=4.0.13
+##          # available=4.0.14
+##          # available=4.0.15
+##          # available=4.0.16
+##          # available=4.0.17
+##          # available=4.1.0
+##          # available=4.1.1
+##          # available=4.1.2
+##          # available=4.1.3
 
 version.org.jetbrains..markdown=0.7.3
